# swhid-verification-tool

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  developer_guide.md  final_dataset.jsonld.jsonld  maintainer_guide.md  purls.txt  pyproject.toml  requirements.txt  swhid-policy.toml  test_exporter.py  test_shwid.py  test_spdx3_model.py  user_guide.md
.claude/: settings.local.json
.claude/agent-memory/gsoc-mentor-devsecops/: MEMORY.md
.claude/agents/: gsoc-mentor-devsecops.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  publish.yml  python-app.yml
cache/: pkg_cargo_libc@0.2.155.json  pkg_maven_junit_junit@4.13.2.json  pkg_pypi_requests@2.32.3.json  pkg_pypi_six@1.17.0.json
crates/: crate_analyzer.py  crate_normalizer.py
dataset/: README.md  findings_report.md  showcase_manifest.jsonld  swhid_dataset.csv
examples/: main.py
findings/: SPDX.json  crates_findings.json  maven_findings.json  pypi_findings.json  test_spdx3_v2.jsonld.jsonld
scripts/: generate_full_dataset.py  generate_showcase_dataset.py
shwid_tool/: api.py  batch_processor.py  cli.py  core.py  logging_config.py  manager.py  purl_parser.py  scanner.py  spdx_exporter.py
shwid_tool/strategies/: base.py  cargo_strategy.py  maven_strategy.py  pypi_strategy.py
swhid_tool/: __init__.py  api.py  batch_processor.py  cli.py  core.py  logging_config.py  manager.py  osv_client.py  policy.py  project_detector.py  purl_parser.py  scanner.py  spdx_exporter.py
swhid_tool/strategies/: __init__.py  base.py  cargo_strategy.py  golang_strategy.py  maven_strategy.py  npm_strategy.py  nuget_strategy.py  pypi_strategy.py
tests/: test_core.py  test_exporter.py  test_golang_strategy.py  test_npm_strategy.py  test_nuget_strategy.py  test_osv_client.py  test_policy.py  test_project_detector.py  test_purl_parser.py  test_scanner.py  test_spdx3_model.py  test_strategies.py  test_swhid.py  test_validation.py
