[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swhid-verification-tool"
version = "0.1.1"
description = "A verification framework to map PURLs to verified SWHIDs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Odysseas Kalaitsidis"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0",
    "swh.model>=6.4.0",
    "rich>=13.7.0",
    "cryptography>=42.0.0",
    "spdx-tools>=0.8.2",
    "semantic-version>=2.10.0",
    "typer>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "packageurl-python>=0.11.2",
    "python-multipart>=0.0.9",
    "pyshacl>=0.25.0",
    "rdflib>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "responses",
    "pytest-cov",
    "build",
    "twine",
]
test = [
    "pytest",
    "responses",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/OdysseasKalaitsidis/SWHID_POC"
Repository = "https://github.com/OdysseasKalaitsidis/SWHID_POC"
"Bug Tracker" = "https://github.com/OdysseasKalaitsidis/SWHID_POC/issues"
Documentation = "https://github.com/OdysseasKalaitsidis/SWHID_POC#readme"

[project.scripts]
swhid-tool = "swhid_tool.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["swhid_tool*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
